# BIT-Run

./: .gitignore  BIT-Run.rc  BIT-Run.sln  BIT-Run.vcxproj  BIT-Run.vcxproj.filters  CMakeLists.txt  README.md  bitrun.inc  floatop.inc  main.asm  microwave.asm  render.asm  resource.h  state.asm
cimple/: drawingThread.c  lifecycle.c  main.c  spirits.c  sprite.c
cimple/include/: BIT_run.h  drawingThread.h  image.h  imagerc.h  lifecycle.h  spirits.h  sprite.h
